deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: federacion-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: federacion
  template:
    metadata:
      labels:
        app: federacion
    spec:
      containers:
      - name: federacion
        image: rafacarrascoperalta/federacion:latest
        ports:
        - containerPort: 80
