service.yaml
apiVersion: v1
kind: Service
metadata:
  name: federacion-service
spec:
  selector:
    app: federacion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
